@@ -1124,8 +1124,8 @@ listen_impl(
 	 * mover will pause immediately when it wants to read the first mover
 	 * record. */
 	if (!ndmp_connection_mover_set_window(self->ndmp,
-					      dself->block_size,
-					      dself->block_size)) {
+					      2*dself->block_size,
+					      2*dself->block_size)) {
 	    set_error_from_ndmp(self);
 	    return FALSE;
 	}
@@ -1726,8 +1726,8 @@ read_to_connection_impl(
     g_assert(mover_state == NDMP9_MOVER_STATE_PAUSED);
 
     if (!ndmp_connection_mover_set_window(self->ndmp,
-		nconn->offset,
-		size? size : G_MAXUINT64 - nconn->offset)) {
+		nconn->offset+32768,
+		size? size : G_MAXUINT64 - (nconn->offset+32768))) {
 	set_error_from_ndmp(self);
 	return 1;
     }
